--- a/form.html
+++ b/form.html
@@ -21,8 +21,7 @@
             </tr>
 <tr><td><p>Mobile no:</p> </td><td><input type="" name="" Placeholder="enter your phone number."></td></tr>
 <tr><td><p>Location</p></td><td><input type="text" location="" placeholder="Entter your location"></td>
-<input type="=submit" name="submit" value="Submit">
-<tr><td><p>Which service do you want?</p></td><td>
+			<tr><td><p>Which service do you want?</p></td><td>
 			<select name="role">
 				<option value="photoshooting">photoshooting</option>
 				<option value="photo editing">photo editing</option>
@@ -31,6 +30,7 @@
 				<option value="web designing">web designing</option>
 			</select></td></tr>
 		</table>
+		<button>Submit</button>
 		</center>
  		</form>
 	
